--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
           
     - name: Deploy with Zappa
       run: |
-        python -m venv env
+        python -m env env
         source env/bin/activate
         pip install zappa
         zappa update dev
