--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,31 @@
 argcomplete==3.2.3
-autopep8==2.0.4
-beautifulsoup4==4.12.3
-boto3==1.34.62
-botocore==1.34.62
-bs4==0.0.2
+boto3==1.34.58
+botocore==1.34.58
 certifi==2024.2.2
 cfn-flip==1.3.0
 charset-normalizer==3.3.2
 click==8.1.7
 durationpy==0.6
-flake8==7.0.0
 hjson==3.1.0
 idna==3.6
 jmespath==1.0.1
 kappa==0.6.0
 MarkupSafe==2.1.5
-mccabe==0.7.0
 placebo==0.9.0
-pycodestyle==2.11.1
-pyflakes==3.2.0
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
 PyYAML==6.0.1
 requests==2.31.0
 s3transfer==0.10.0
 six==1.16.0
-soupsieve==2.5
 text-unidecode==1.3
 toml==0.10.2
-tomli==2.0.1
 tqdm==4.66.2
-troposphere==4.7.0
-urllib3==1.26.7
+troposphere==4.6.0
+urllib3==1.26.18
+pycodestyle==2.11.1
+pyflakes==3.2.0
+pytest==8.0.2
 Werkzeug==3.0.1
 zappa==0.58.0
+flake8==7.0.0
